# LIT-an-LLVM-IR-Tuner-Pilot-Project

./: .gitignore  CMakeLists.txt  README.md  add_new_cond.cpp  add_random_arithmetic.cpp  all_mutations.cpp  benchmark.sh  build.sh  call_executable.cpp  constants.h  core.cpp  create_db.sh  decision_maker.cpp  extract_fastest.py  file_management.cpp  genetic_tuning.cpp  main.cpp  measure_time.cpp  modified.ll  move_blockwise.cpp  mutation.cpp  mutation.h  mutation_factory.cpp  original.ll  original_code.c  plot_times.py  random_tuning.cpp  replace_arithmetic.cpp  results.db  utils.cpp  visualize_tree.py
benchmarks/bubblesort/: benchmark.sh  bubblesort.cpp  config.json  generate.py  input.json  output.json
benchmarks/dt/: config.json  dt.c  dvec1.json
benchmarks/health/: args.c  config.json  health.c  health.h  list.c  poisson.c  result.txt
benchmarks/mm/: config.json  generate.py  main.cpp
benchmarks/perm/: config.json  perm.c
benchmarks/pi/: config.json  output.txt  pi.c  result.txt
benchmarks/towers/: config.json  result.txt  towers.c
cherrypicked/pi/: b  best  best.ll  fastest_correct_mutations.csv  og  original  original.ll
eval_results/: pi_small_tree.json
eval_results/bubblesort/: all_tree.json  baseline_times.json  compiled_tree.json  double_check_tree.json  new_muts_tree.json  no_mem2reg_tree.json  old_code_tree.json  only_mem2reg_tree.json  run_0_tree.json
eval_results/dt/: baseline_times.json  new_muts_tree.json  no_mem2reg_tree.json  old_code_tree.json  run_0_tree.json  run_1_tree.json  run_2_tree.json
eval_results/health/: all_tree.json  new_muts_tree.json  run_0_tree.json
eval_results/mm/: more_reps_tree.json
eval_results/perm/: all_tree.json  more_reps_tree.json  new_muts_tree.json  run_0_tree.json
eval_results/pi/: baseline_times.json  more_reps_tree.json  new_arith_tree.json  no_mem2reg_tree.json  run_0_tree.json  run_1_tree.json  run_2_tree.json  run_3_tree.json  run_4_tree.json  simple_speedup_tree.json
eval_results/towers/: last_tree.json  more_reps__tree.json  more_reps_tree.json  run_0_tree.json
scripts/: build.sh  compile_original_code.sh  create_db.sh
src/: constants.h  main.cpp  rebuild_from_csv.cpp
src/core/: benchmark_config.cpp  benchmark_config.h  decision_maker.cpp  run.cpp  run.h
src/mutations/: add_new_cond.cpp  add_random_arithmetic.cpp  delete_random_instruction.cpp  move_blockwise.cpp  mutation.cpp  mutation.h  mutation_factory.cpp  replace_arithmetic.cpp  replace_load_with_phi.cpp  replace_with_dominating_value.cpp  split_loop.cpp  unsafe_mem2reg.cpp  unsafe_mem_2_reg.cpp
src/output/: array.cpp  matrix2d.cpp  output.cpp  scalar.cpp
src/tuning_strategies/: beam_search.cpp  genetic_tuning.cpp  random_tuning.cpp
src/utils/: file_management.cpp  is_optimizable.cpp  measure_time.cpp  randomness_utils.cpp  utils.cpp
tests/: dvec1.json  test_array_output.cpp
tools/: build_cpp_tool.sh  count_distinct_mutations.py  extract_fastest.py  extract_simple_fastest.py  get_fastest_n.py  llvm_pass_order_opentuner.py  plot_score_func.py  plot_times.py  run_benchmark_evaluation.py  simple_compare.py  visualize_tree.py
tools/measure_search_space/: main.cpp
